fix(option) : Correction de l'alignement des images

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -4163,7 +4163,7 @@ a.rcmContactAddress {
 
     .picture {
         display: inline-block;
-        width: 100%;
+        width: 94%;
         // height: 121px;
         aspect-ratio: 1.6 / 1;
 
@@ -4258,10 +4258,10 @@ a.rcmContactAddress {
 .green-badge {
 	position: absolute;
 	top: 0;
-	right: 5px;
+	right: 9px;
 	background-color: #484D7AC7;
 	border-radius: 5px;
-	width: calc(100% - 10px);
+	width: calc(100% - 19px);
 	// height: 121px;
   aspect-ratio: 1.6 / 1;
 	text-align: center;
